# bioimageloader

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGES.md  LICENSE  README.md  TODO.md  pyproject.toml  setup.cfg
_static/: table_maskdataset.html  table_maskdataset.md
bioimageloader/: __init__.py  _experimentals.py  _version.py  base.py  batch.py  common.py  config.py  plots.py  template.py  transforms.py  types.py  utils.py
bioimageloader/collections/: DSB2018.py  __init__.py  _bbbc002.py  _bbbc004.py  _bbbc006.py  _bbbc007.py  _bbbc008.py  _bbbc009.py  _bbbc013.py  _bbbc014.py  _bbbc015.py  _bbbc016.py  _bbbc018.py  _bbbc020.py  _bbbc021.py  _bbbc026.py  _bbbc030.py  _bbbc039.py  _bbbc041.py  _cellpose.py  _compath.py  _digitpath.py  _dsb2018.py  _frunet.py  _livecell.py  _mntb.py  _murphylab.py  _s_bsst265.py  _stardist.py  _tissuenet.py  _tnbc.py  _ucsb.py  dsb2018.py  tnbc.py
configs/: all_collections.yml  config_example.yml
