[metadata]
name = bioimageloader
author = Seongbin Lim
author_email = seongbin.lim@polytechnique.edu
description = load bioimages for machine learning
url = https://github.com/LaboratoryOpticsBiosciences/bioimageloader
version = 0.0.9
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
install_requires =
  numpy
  scipy
  Pillow
  opencv-python-headless
  tifffile
  imagecodecs
  albumentations  # scikit-image, opencv-python-headless, scipy
  scikit-image
  gimpformats  # MurphyLab to handle .xcf
  PyYAML

[options.extras_require]
all =
  %(dev)s
  %(torch)s
dev =
  mypy
  isort
  flake8
  Sphinx
  numpydoc
  furo
  nbsphinx
  sphinx-copybutton
  plotly  # for plot
  scikit-learn
torch =
  torch
  torchvision
tensorflow =
  tensorflow
