[metadata]
name = bioimageloader
author = Seongbin Lim
author_email = seongbin.lim@polytechnique.edu
description = load bioimages for machine learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LaboratoryOpticsBiosciences/bioimageloader
version = 0.0.9
classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: BSD License
  Intended Audience :: Education
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Bio-Informatics
  Topic :: Scientific/Engineering :: Image Processing
  Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
install_requires =
  numpy
  scipy
  Pillow
  opencv-python-headless
  tifffile
  imagecodecs
  albumentations  # scikit-image, opencv-python-headless, scipy
  scikit-image
  PyYAML
  # gimpformats  # MurphyLab to handle .xcf

[options.extras_require]
all =
  %(dev)s
  %(torch)s
dev =
  mypy
  isort
  flake8
  Sphinx
  numpydoc
  furo
  nbsphinx
  sphinx-copybutton
  plotly  # for plot
  scikit-learn
  gimpformats  # too tight dependency requirements
torch =
  torch
  torchvision
tensorflow =
  tensorflow
